# printDock

./: .cloudrun.env  .dockerignore  .eslintrc.cjs  .gitignore  BLUEPRINT_CORE.md  BLUEPRINT_EXECUTION.md  BLUEPRINT_REFERENCE.md  CHANGELOG.md  DEV_STORE_INFO.md  Dockerfile  GIT_FLOW.md  PrintDock_Cursor_Spec.md  PrintDock_Firebase_Spec_2.md  README.md  RELEASING.md  SHOPIFY_APP_BLUEPRINT.md  SHOPIFY_DATA_PROTECTION.md  cloudbuild.yaml  index.js  package-lock.json  package.json  shopify.app.toml  vitest.config.ts
app/: entry.server.tsx  firebase.server.ts  firestore-session-storage.ts  globals.d.ts  root.tsx  shopify.server.ts
docs/: APP_STORE_PRICING_AND_BILLING.md  COMMANDS.md  DEPLOY_CLOUD_RUN.md  DEV_STORE_BILLING_TESTING.md  GCLOUD_COMMANDS.md  GLOSSARY.md  (+12 more)
extensions/auto-pricing-rs/: .gitignore  Cargo.toml  shopify.extension.toml
extensions/auto-pricing-rs/src/: main.rs  run.graphql
extensions/auto-pricing-rs/tests/: fixture-live.json
extensions/auto-pricing-rs/tests/fixtures/: fee-line-valid.json  invalid-signature.json  legacy-session-valid.json  multi-fee-lines.json  no-eligible-lines.json  no-hmac.json  skip-selling-plan-fee-line.json
extensions/cart-fee-validation/: Cargo.toml  package.json  shopify.extension.toml
extensions/cart-fee-validation/locales/: en.default.json
extensions/cart-fee-validation/src/: cart_validations_generate_run.graphql  cart_validations_generate_run.rs
extensions/cart-fee-validation/tests/fixtures/: buildb-missing-fee.json  buildb-valid.json  legacy-no-fee-line.json  quantity-exceeds-one.json  quantity-is-one.json
(+150 files in other folders)
